--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ignite-ui/tokens",
+  "name": "@gh-ignite-ui/tokens",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/index.js",
@@ -16,7 +16,7 @@
   "devDependencies": {
     "tsup": "^6.5.0",
     "typescript": "^4.9.4",
-    "@ignite-ui/eslint-config": "*",
-    "@ignite-ui/ts-config": "*"
+    "@gh-ignite-ui/eslint-config": "*",
+    "@gh-ignite-ui/ts-config": "*"
   }
 }
